--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,11 +23,10 @@ body {
   height: 100%;
   -webkit-filter: blur(5px);
   filter: blur(5px);
-  opacity: 0.4;
+  opacity: 0.2;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
 }
 
 .loadingScreen {
@@ -40,13 +39,11 @@ body {
 }
 
 .homeContent {
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: 9999;
+  z-index: 50;
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 3rem;
+
 }
 
 .loginTitleContainer {
@@ -56,11 +53,10 @@ body {
 }
 
 .login {
-  z-index: 9999;
+  z-index: 999;
 }
 .signup {
-  z-index: 9999;
-
+  z-index: 999;
 }
 .signupFormContainer {
   display: flex;
@@ -83,13 +79,13 @@ body {
 .homepageWelcome {
   font-size: 2rem;
   font-weight: 600;
+  z-index: 50;
+  margin-bottom: 4rem;
 }
 .homepageText {
-font-size: 1.5rem
-}
+  font-size: 1.5rem;
+  z-index: 50;
 
-.homepageWelcome {
-  margin-bottom: 4rem;
 }
 
 header {
@@ -579,10 +575,10 @@ textarea {
     font-size: 0.6rem;
   }
   .emailAndLogOutContainer {
-  flex-direction: column;
-  width: 5rem;
-  align-items: center;
-  justify-content: center;
+    flex-direction: column;
+    width: 5rem;
+    align-items: center;
+    justify-content: center;
   }
   .emailAndLogOutContainer > button {
     margin: 0 auto;
@@ -623,7 +619,6 @@ textarea {
     margin-top: 1rem;
   }
 
-
   .signup {
     margin-top: 1rem;
     margin-bottom: 2rem;
@@ -659,7 +654,8 @@ textarea {
   .providerListNameAndCredentials {
     width: 20rem;
   }
-  .providerListNameAndCredentials:hover, .patientInformation:hover {
+  .providerListNameAndCredentials:hover,
+  .patientInformation:hover {
     transform: none;
   }
 
@@ -726,8 +722,7 @@ textarea {
     margin: 1rem auto;
   }
 
-.editNoteForm {
-  width: 80%;
-}
-  
+  .editNoteForm {
+    width: 80%;
+  }
 }
