--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -127,6 +127,7 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   width: 20rem;
 }
 .loginAndSignupContainer {
@@ -574,12 +575,9 @@ textarea {
   }
   .emailAndLogOutContainer {
     flex-direction: column;
-    width: 5rem;
+    width: 100%;
     align-items: center;
     justify-content: center;
-  }
-  .emailAndLogOutContainer > button {
-    margin: 0 auto;
   }
   .logout {
     width: 4rem;
