--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,10 +6,14 @@
   --primary: #1aac83;
   --error: #e7195a;
 }
+
 body {
   background: #f1f1f1;
   margin: 0;
   font-family: "Poppins";
+}
+.confirmPassword {
+  color: var(--error)
 }
 
 .background-image,
@@ -34,7 +38,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 600;
 }
 
@@ -191,7 +195,7 @@ form.signup {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 40rem;
+  height: 45rem;
 }
 
 .loginFormButton,
@@ -204,11 +208,9 @@ form.signup {
   border-radius: 10rem;
   cursor: pointer;
 }
-
 .signupSubmitButton {
   margin-bottom: 1rem;
 }
-
 .note {
   cursor: pointer;
 }
