--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -138,7 +138,8 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-weight: 700;
+  font-weight: 600;
+  font-size: 1.5rem;
   margin: 0 auto;
   padding: 40px 20px;
   background: #fff;
@@ -814,5 +815,8 @@ textarea {
 
   .editNoteForm {
     width: 80%;
+  }
+  .loginAndSignupContainer {
+    font-size: 1rem;
   }
 }
