--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -83,11 +83,19 @@ body {
   font-size: 4rem;
   font-weight: 600;
   z-index: 50;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   margin-top: 4rem;
 }
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 2px solid black;
+  padding: 0;
+  margin: 2rem;
+}
 .homepageText {
-  font-size: 1.5rem;
+  font-size: 2.3rem;
   z-index: 50;
 }
 
